[gd_scene load_steps=18 format=2]

[ext_resource path="res://Texture/Sprite/Present.png" type="Texture" id=1]
[ext_resource path="res://Script/Present.gd" type="Script" id=2]
[ext_resource path="res://Shader/flash_shader.gdshader" type="Shader" id=3]
[ext_resource path="res://SFX/explosion.ogg" type="AudioStream" id=4]
[ext_resource path="res://SFX/pain.ogg" type="AudioStream" id=5]

[sub_resource type="ShaderMaterial" id=10]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": false,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Run",
"speed": 6.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": false,
"name": "Explode",
"speed": 5.0
} ]

[sub_resource type="Animation" id=11]
resource_name = "Hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 9, 16 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 16, 20 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 138, 8 )

[node name="Present" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 10 )
frames = SubResource( 5 )
animation = "Run"
frame = 1
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
anims/Hurt = SubResource( 11 )
anims/RESET = SubResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0 )
shape = SubResource( 6 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -10, 0 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="ExplosionRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionRange"]
position = Vector2( 0, -8 )
shape = SubResource( 7 )
disabled = true

[node name="Body" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
position = Vector2( 0, -4 )
shape = SubResource( 8 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DetectArea" type="Area2D" parent="."]
position = Vector2( 56, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
position = Vector2( 126, 0 )
shape = SubResource( 9 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0, -4 )
scale = Vector2( 2.4, 2.8 )
physics_process_parent = true

[node name="ExplodeSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="ScreamSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="ExplosionRange" to="." method="_on_ExplosionRange_body_entered"]
[connection signal="area_entered" from="Body" to="." method="_on_Body_area_entered"]
[connection signal="body_entered" from="Body" to="." method="_on_Body_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="body_entered" from="DetectArea" to="." method="_on_DetectArea_body_entered"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
